[blink-gen-property-trees] Fix viewport scroll extents

The viewport's scroll node's container and contents rects must match the
layout viewport's size. However, we were incorrectly excluding scrollbars
from these rects. This doesn't make a difference when we're not zoomed in
(since the sizes are the same), but when we do zoom in - the max scroll
offset calculation on the compositor side would then incorrectly include
a scaled scrollbar in the max offset calculation, making the max scroll
offset too small since the scrollbars don't actually scale when we zoom.

Bug: 878904
Cq-Include-Trybots: luci.chromium.try:linux-blink-gen-property-trees;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I2b37838874af61b10c0628c8fbd54409140dc962
Reviewed-on: https://chromium-review.googlesource.com/1199609
Reviewed-by: Philip Rogers <pdr@chromium.org>
Commit-Queue: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588553}
Former-commit-id: 6b1bad395f50417ca241143e8bebf7cf8b1d47d6