third_party/blink/renderer/core/frame/visual_viewport.cc
@@ -161,9 +161,8 @@ void VisualViewport::UpdatePaintPropertyNodesIfNeeded(
 
   {
     ScrollPaintPropertyNode::State state;
-    state.container_rect = IntRect(IntPoint(), ExcludeScrollbars(size_));
-    state.contents_rect =
-        IntRect(IntPoint(), ExcludeScrollbars(ContentsSize()));
+    state.container_rect = IntRect(IntPoint(), size_);
+    state.contents_rect = IntRect(IntPoint(), ContentsSize());
 
     state.user_scrollable_horizontal =
         UserInputScrollable(kHorizontalScrollbar);
